	capabilities("tcltk") && capabilities("X11")).

    o	The parser no longer marks strings containing octal or hex
	escapes as being in UTF-8 when entered in a UTF-8 locale.

    o	On platforms with cairo but not Pango (notably Mac OS X) the
	initial default X11() type is set to "Xlib": this avoids
	several problems with font selection when done by cairo rather
	than Pango (at least on Mac OS X).


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.

    o	Use of multiple arguments to return() is now defunct.

    o	The use of UseMethod() with more than two arguments is now defunct.

    o	In the 'methods' package, the MethodsList metadata objects which
	had been superseded by hash tables (environments) since R
	2.8.0 are being phased out.  At the present stage stub objects
	are generated and a warning issued if these are accessed:
	shortly none will be generated.

	getMethods() is now deprecated, with its internal use replaced
        by findMethods() and other changes.

    o 	Parsing strings containing both octal/hex and Unicode escapes
	now gives a warning and will become an error in R 2.12.0.


INSTALLATION

    o	UTF-8 is now used for the reference manual and package
	manuals.  This requires LaTeX '2005/12/01' or later.


PACKAGE INSTALLATION

    o	Characters in R source which are not translatable to the
	current locale are now handled more tolerantly:  these will be
	converted to hex codes with a warning.  Such characters are
	only really portable if they appear in comments.

    o	R CMD INSTALL now tests that the installed package can be loaded